Added functions
