# api/swagger.yaml
@@ -221,7 +221,7 @@ paths:
           description: "Invalid ID supplied"
         "404":
           description: "Event not found"
-      x-swagger-router-controller: "Seminars"
+      x-swagger-router-controller: "Performers"
 
   /seminars:
     get:
@@ -298,11 +298,33 @@ paths:
           description: "Event not found"
       x-swagger-router-controller: "Seminars"
 
+  /user/me:
+    get:
+      tags:
+      - "user"
+      summary: "Information about current user"
+      description: "Return information about the user"
+      operationId: "getMyUser"
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/User"
+        "401":
+          description: "Not authorized"
+      x-swagger-router-controller: "Users"
+  #/user/login:
+  #  post:
+  #/user/register:
+  #  post:
+
 definitions:
   ArtisticEvent:
     type: "object"
     properties:
-      artisticEventId:
+      id:
         type: "integer"
         format: "int64"
       name:
@@ -311,18 +333,22 @@ definitions:
       description:
         type: "string"
         format: "string"
-      day:
+      date:
         type: "string"
         format: "date"
+      genre:
+        type: "string"
+        format: "string"
     example:
-      artisticEventId: 0
+      id: 0
       name: "name"
       description: "description"
-      day: "2000-01-23"
+      date: "2000-01-23"
+      genre: "void"
   Seminar:
     type: "object"
     properties:
-      seminarId:
+      id:
         type: "integer"
         format: "int64"
       name:
@@ -331,27 +357,44 @@ definitions:
       description:
         type: "string"
         format: "string"
-      day:
+      date:
         type: "string"
         format: "date"
+      genre:
+        type: "string"
+        format: "string"
     example:
-      seminarId: 0
+      id: 0
       name: "name"
       description: "description"
-      day: "2000-01-23"
+      date: "2000-01-23"
+      genre: "void"
   Performer:
     type: "object"
     properties:
-      performerId:
+      id:
         type: "integer"
         format: "int64"
       name:
         type: "string"
         format: "string"
-      description:
+      bio:
         type: "string"
         format: "string"
     example:
-      performerId: 0
+      id: 0
       name: "name"
-      description: "description"
+      bio: "bio"
+  User:
+    type: "object"
+    properties:
+      username:
+        type: "string"
+        format: "string"
+      password:
+        type: "string"
+        format: "string"
+    example:
+      username: "Chico"
+      password: "consuelo123"
+
