# controllers/Performers.js
@@ -25,7 +25,7 @@ module.exports.getPerformers = function getPerformers (req, res, next) {
 };
 
 module.exports.getLinkedEventsByPerformer = function getLinkedEventsByPerformer (req, res, next) {
-  var performerId = req.swagger.params['performerId'].value;
+    var performerId = req.swagger.params['performerId'].value;
   Performers.getLinkedEventsByPerformer(performerId)
     .then(function (response) {
       utils.writeJson(res, response);
